リストをつくりました

--- a/index.html
+++ b/index.html
@@ -5,4 +5,20 @@ nhan/220057
   
 <img src="conmeo.jpg">
 <hr>
-<a href="http://google.com">Google</a>
+<a href="http://google.com">Google</a
+
+<hr>
+
+<ol>
+    <li>grape</li>
+    <li>pear</li>
+    <li>orange</li>
+    <li>banana</li>
+</ol>
+
+<ul>
+    <li>grape</li>
+    <li>pear</li>
+    <li>orange</li>
+    <li>banana</li>
+</ul>
