色をつけた

--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <style>
- h1 {color: lightskyblue;}
+ h1 {
+	color: lightskyblue;
+        background-color: floralwhite; }
 </style>
-
+ ol {
+        color: red;
+	background-color: yellow; }
+ u1{
+        color: green;
+	list-style: none }
 
 <h1>Hello, GitHub Pages!</h1>
 nhan/220057
