--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
  h1 {
 	color: lightskyblue;
         background-color: floralwhite; }
-</style>
  ol {
-        color: red;
-	background-color: yellow; }
- u1{
+        color: red; }
+ ul{
         color: green;
-	list-style: none }
-
+	list-style: circle }
+</style>
 <h1>Hello, GitHub Pages!</h1>
 nhan/220057
 
